Fix : Contact height on mobile

--- a/src/components/section/contact.scss
+++ b/src/components/section/contact.scss
@@ -52,6 +52,7 @@
 
 @media only screen and (max-width: 1100px) {
   #contact {
+    height: auto;
     .background {
       @include variables.dcc(row);
     }
@@ -59,6 +60,7 @@
     .main-container {
       position: relative;
       right: 0;
+      margin: 2rem;
     }
   }
 }
